python-stunnel-deploymenttemplate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/devfile-samples/devfile-sample-python-basic.git
    deployment.kubernetes.io/revision: "2"
    isFromDevfile: "true"
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2024-05-28T22:33:26Z"
  generation: 4
  labels:
    app: python-basic-stunnel
    app.kubernetes.io/component: python-basic
    app.kubernetes.io/instance: python-basic
    app.kubernetes.io/name: python-basic
    app.kubernetes.io/part-of: sample-app
    app.openshift.io/runtime: python
  name: python-stunnel-container
  namespace: mukeshmohanan-dev
  resourceVersion: "4380431482"
  uid: 9cf0b5f6-b631-45b6-bb6a-a8fe8eab0c3c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: python-basic-stunnel
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: python-basic-stunnel
        deployment: python-basic-stunnel
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/mukeshmohanan-dev/python-basic@sha256:b95f7ea52f21a010aedfb30177f1b900e9ce84a678a79c3c16207b69b0d52878
        imagePullPolicy: Always
        name: python-basic
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - image: image-registry.openshift-image-registry.svc:5000/mukeshmohanan-dev/stunnel@sha256:11b1705cb1347f895ca48ab1475584d6442c18fd3e58830b06286275438c55b3
        imagePullPolicy: Always
        name: container
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/stunnel/certs/
          name: my-tls-secret
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: my-tls-secret
        secret:
          defaultMode: 420
          secretName: my-tls-secret
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-05-28T22:33:26Z"
    lastUpdateTime: "2024-05-28T22:48:26Z"
    message: ReplicaSet "python-stunnel-container-6d87d5f57f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-05-28T22:59:30Z"
    lastUpdateTime: "2024-05-28T22:59:30Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
